fixed score spacing

--- a/assets/css/sass/_main.scss
+++ b/assets/css/sass/_main.scss
@@ -177,3 +177,8 @@ md-slider.md-min .md-thumb:after {
 md-slider-container md-input-container input[type=number] {
 	padding-left: 12px;
 }
+
+md-list-item .md-avatar {
+	width: 60px;
+	height: 60px;
+}
